# naia-socket-webrtc-rs-example

./: Cargo.toml  README.md
naia-socket-server/: Cargo.toml
naia-socket-server/src/: app.rs
webrtc-rs-client/: Cargo.toml
webrtc-rs-client/src/: main.rs
