[package]
name = "webrtc-rs-client"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = ".."
license = "MIT OR Apache-2.0"
edition = "2018"
publish = false

[features]

[dependencies]
webrtc = "=0.4.0"
tokio = { version = "=1.15.0", features = ["full"] }
env_logger = "=0.9.0"
clap = "=3.0.8"
tokio-util = "=0.6.9"
anyhow = "=1.0.52"
log = "=0.4.14"
bytes = "=1.1.0"
reqwest = { version = "=0.11", features = ["rustls-tls"] }
tinyjson = { version = "=2.3.0" }